styles: fix registration status , align student homepage

--- a/client/src/components/UserSpecific/student/RegistrationStatus.module.css
+++ b/client/src/components/UserSpecific/student/RegistrationStatus.module.css
@@ -5,9 +5,8 @@
 
 .registration-status {
   display: flex;
-  justify-content: space-around;
-  width: 1196px;
-  height: 159px;
+  justify-content: space-between;
+  padding: 10px 5px;
   border-radius: 15px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   background: #f6f5f5;
