--- a/client/src/components/UserSpecific/student/home/GradesSection.module.css
+++ b/client/src/components/UserSpecific/student/home/GradesSection.module.css
@@ -5,7 +5,6 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: inline;
   width: 600px;
-  margin-left: 50px;
 }
 
 .grades-section h2 {
